// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests in AddCategory Should change the input box 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value="Hello world"
  />
</form>
`;

exports[`Tests in AddCategory Should show the component correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`Tests in AddCategory Should submit form, call setCategories and clear the input box 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value="Matrix"
  />
</form>
`;
